--- a/srcs/ftps/Dockerfile
+++ b/srcs/ftps/Dockerfile
@@ -12,9 +12,10 @@ COPY srcs/example.crt /etc/vsftpd
 COPY srcs/example.key /etc/vsftpd
 
 RUN  chmod 777 start.sh
+RUN  touch var/log/vsftpd.log
 RUN  adduser -D admin && echo "admin:admin" | chpasswd
 #Showing which ports to listen
-EXPOSE 20 21
+EXPOSE 20 21 21100
 
-# #Docker run
+#Docker run
 CMD ["/start.sh"]
