--- a/srcs/ftps/ftps.yaml
+++ b/srcs/ftps/ftps.yaml
@@ -2,10 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ftps-svc
+  annotations:
+    metallb.universe.tf/allow-shared-ip: ekvm
 spec:
   selector:
     app: ftps
   type: LoadBalancer
+  loadBalancerIP: 192.168.99.100
   ports:
     - port: 20
       protocol: TCP
@@ -13,6 +16,8 @@ spec:
     - port: 21
       protocol: TCP
       name: transfer
+    - port: 21100
+      name: interface
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -37,3 +42,4 @@ spec:
         ports:
         - containerPort: 20
         - containerPort: 21
+        - containerPort: 21100
