--- a/srcs/nginx/srcs/nginx.conf
+++ b/srcs/nginx/srcs/nginx.conf
@@ -1,11 +1,13 @@
 server {
-    listen 80;
+    listen 80 default_server;
+    listen [::]:80 default_server;
     return 301 https://$host$request_uri;
 }
 
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
+
     ssl_certificate     /etc/ssl/certs/example.crt;
     ssl_certificate_key /etc/ssl/private/example.key;
 
