--- a/srcs/influxdb/influxdb.yaml
+++ b/srcs/influxdb/influxdb.yaml
@@ -1,71 +1,71 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: mysql-volume
+  name: influxdb-volume
   labels:
     type: local
 spec:
   storageClassName: manual
   capacity:
-    storage: 50Mi
+    storage: 1Gi
   accessModes:
     - ReadWriteOnce
   hostPath: 
-    path: "/mnt/data_mysql"
+    path: "/mnt/data_influxdb"
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysql-volume-claim
+  name: influxdb-volume-claim
 spec:
   storageClassName: manual
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 50Mi
+      storage: 1Gi
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql-svc
+  name: influxdb-svc
 spec:
   type: ClusterIP
   selector:
-    app: mysql
+    app: influxdb
   ports:
-  - port: 3306
-    name: mysql
-    targetPort: 3306
+  - port: 8086
+    name: influxdb
+    targetPort: 8086
     
 ---
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
-  name: mysql-deployment
+  name: influxdb-deployment
 spec: 
   selector:
     matchLabels:
-      app: mysql
+      app: influxdb
   replicas: 1 # tells deployment to run 1 pods matching the template
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app: mysql
+        app: influxdb
     spec:
       containers:
-      - image: mysql_image
-        name: mysql
+      - image: influxdb_image
+        name: influxdb
         imagePullPolicy: Never
         ports:
-        - containerPort: 3306
-          name: mysql
+        - containerPort: 8086
+          name: influxdb
         volumeMounts:
-        - name: mysql-volume
-          mountPath: /var/lib/mysql
+        - name: influxdb-volume
+          mountPath: /var/lib/influxdb/meta
       volumes:
-      - name: mysql-volume
+      - name: influxdb-volume
         persistentVolumeClaim:
-          claimName: mysql-volume-claim
+          claimName: influxdb-volume-claim
