--- a/srcs/phpmyadmin/phpmyadmin.yaml
+++ b/srcs/phpmyadmin/phpmyadmin.yaml
@@ -1,42 +1,42 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: wordpress-svc
+  name: pma-svc
   annotations:
     metallb.universe.tf/allow-shared-ip: ekvm
   labels:
-    app: wordpress
+    app: pma
 spec:
   externalTrafficPolicy: Cluster
   ports:
-    - port: 5050
+    - port: 5000
   selector:
-    app: wordpress
+    app: pma
   type: LoadBalancer
   loadBalancerIP: 192.168.99.100
 ---
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
-  name: wordpress-deployment
+  name: pma-deployment
   labels:
-    app: wordpress
+    app: pma
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: wordpress
+      app: pma
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app: wordpress
+        app: pma
     spec:
       containers:
-      - image: wordpress_image
-        name: wordpress
+      - image: pma_image
+        name: pma
         imagePullPolicy: Never
         ports:
-        - containerPort: 5050
-          name: wordpress
+        - containerPort: 5000
+          name: pma
