Almost ready. Nginx ssh and redirects left. Some cosmetic issues maybe (wordpress included)

--- a/srcs/ftps/Dockerfile
+++ b/srcs/ftps/Dockerfile
@@ -12,6 +12,7 @@ COPY srcs/example.crt /etc/vsftpd
 COPY srcs/example.key /etc/vsftpd
 
 RUN  chmod 777 start.sh
+#RUN  chmod 757 -R /
 RUN  touch var/log/vsftpd.log
 RUN  adduser -D admin && echo "admin:admin" | chpasswd
 #Showing which ports to listen
