--- a/srcs/ftps/srcs/vsftpd.conf
+++ b/srcs/ftps/srcs/vsftpd.conf
@@ -1,10 +1,7 @@
-# anonymous_enable=NO
-# local_enable=YES
-# write_enable=YES
 allow_writeable_chroot=YES
 local_enable=YES
 chroot_local_user=YES
-local_root=/
+local_root=/home/admin
 write_enable=YES
 local_umask=022
 passwd_chroot_enable=YES
