--- a/srcs/influxdb/influxdb.yaml
+++ b/srcs/influxdb/influxdb.yaml
@@ -1,4 +1,40 @@
 apiVersion: v1
+kind: Secret
+metadata:
+  name: influxdb-secret
+  labels:
+    app: influxdb
+type: Opaque
+stringData:
+  INFLUXDB_CONFIG_PATH: /etc/influxdb/influxdb.conf
+  INFLUXDB_ADMIN_USER: admin
+  INFLUXDB_ADMIN_PASSWORD: admin
+  INFLUXDB_DB: telegraf
+  INFLUXDB_USER: admin
+  INFLUXDB_USER_PASSWORD: admin
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: influxdb-config
+  labels:
+    app: influxdb
+data:
+  influxdb.conf: |
+    bind-adress="127.0.0.1:8088"
+    [meta]
+      dir="/var/lib/influxdb/meta"
+    [data]
+      dir="/var/lib/influxdb/data"
+      wal-dir = "/var/lib/influxdb/wal"
+      trace-logging-enable=true
+    [http]
+      bind-addres=":8088"
+      log-enabled=true
+    [[graphite]]
+      database="telegraf"
+---
+apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: influxdb-volume
@@ -63,9 +99,19 @@ spec:
         - containerPort: 8086
           name: influxdb
         volumeMounts:
+        - name: influxdb-config
+          mountPath: /etc/influxdb/influxdb.conf
+          subPath: influxdb.conf
+          readOnly: true
         - name: influxdb-volume
-          mountPath: /var/lib/influxdb/meta
+          mountPath: /var/lib/influxdb/
+        envFrom:
+          - secretRef:
+              name: influxdb-secret
       volumes:
       - name: influxdb-volume
         persistentVolumeClaim:
           claimName: influxdb-volume-claim
+      - name: influxdb-config
+        configMap:
+          name: influxdb-config
